# openusm-

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
include/: deque.hpp  float.hpp  hash_map.hpp  list.hpp  map.hpp  memory.hpp  set.hpp  stack.hpp  utility.hpp  vector.hpp  xhash.hpp  xmemory.hpp  xtree.hpp  xutility.hpp
shaders/: im2d_PS.hlsl  im2d_VS.h  im2d_VS.hlsl  pcuv_shader.txt  pcuv_shader_PS.txt  pcuv_shader_VS.txt  runFxc.sh  test_VS.txt  us_frontend_PS.hlsl  us_frontend_PS.txt  us_frontend_VS.hlsl  us_frontend_VS.txt  us_pcuv_PS.hlsl  us_pcuv_PS.txt  us_pcuv_VS.hlsl  us_person_VS.hlsl  us_person_VS.txt
shaders/us_person/: 0_VS.h  0_VS.hlsl  0_VS.txt  1_VS.h  1_VS.txt  2_VS.h  3_VS.h  3_VS.hlsl  3_VS.txt  7_PS.hlsl  outline_PS.hlsl  outline_VS.h  outline_VS.hlsl  outline_VS.txt
src/: aarect.cpp  aarect.h  actor.cpp  actor.h  actor_deluxe.cpp  actor_deluxe.h  advanced_entity_ptrs.cpp  advanced_entity_ptrs.h  aeps.cpp  aeps.h  ai_adv_strength_test_data.cpp  ai_adv_strength_test_data.h  ai_crawl_params_record.cpp  ai_crawl_params_record.h  ai_find_best_swing_anchor.cpp  ai_find_best_swing_anchor.h  ai_interact_resource_handler.cpp  ai_interact_resource_handler.h  ai_interaction_data.cpp  ai_interaction_data.h  ai_param_types.h  ai_path.cpp  ai_path.h  ai_pedestrian.cpp  ai_pedestrian.h  ai_player_controller.cpp  ai_player_controller.h  ai_plr_loco_crawling.cpp  ai_plr_loco_crawling.h  ai_quad_path.cpp  ai_quad_path.h  ai_quad_path_cell.cpp  ai_quad_path_cell.h  ai_region_paths.cpp  ai_region_paths.h  ai_state_graph_resource_handler.cpp  ai_state_graph_resource_handler.h  ai_state_jump.cpp  ai_state_jump.h  ai_state_run.cpp  (+1238 more)
src/charanimtype/: character_pose_skel.cpp  character_pose_skel.h  charcomponentbase.cpp  charcomponentbase.h  charcomponentmanager.cpp  charcomponentmanager.h  fakerootposedesc.cpp  fakerootposedesc.h
src/chuck/vm/: chuck_str.cpp  chuck_str.h  opcodes.h  script_instance_mashing.cpp  script_instance_mashing.h  script_library_class.cpp  script_library_class.h  script_object.cpp  script_object.h  so_data_block.cpp  so_data_block.h  vm_executable.cpp  vm_executable.h  vm_stack.cpp  vm_stack.h  vm_thread.cpp  vm_thread.h
src/mash/pc/include/: mash_info_struct.h
src/mash/pc/src/: mash_info_struct.cpp
src/mash/xbox/include/: mash_info_struct.h
src/mash/xbox/src/: mash_info_struct.cpp
src/nal/include/common/: nal_anim.h  nal_generic.h  nal_list.h  nal_skeleton.h
src/nal/source/common/: nal_anim.cpp  nal_generic.cpp  nal_list.cpp  nal_skeleton.cpp
src/nalcomp/: nal_anim_comp.h  nal_instance.h  nal_pose_comp.cpp  nal_pose_comp.h
src/nfl/src/: nfl_driver.cpp  nfl_driver.h  nfl_system.cpp  nfl_system.h
src/nfl/src/win32/: nfl_win32_driver.h
src/ngl/include/: ngl_lighting.h  ngl_mesh.h  ngl_params.h  ngl_scene.h  ngl_texture.h  ngl_vertexdef.h
src/ngl/include/dx/: ngl_dx_core.h  ngl_dx_draw.h  ngl_dx_font.h  ngl_dx_palette.h  ngl_dx_scene.h  ngl_dx_shader.h  ngl_dx_state.h  ngl_dx_tex_create.h  ngl_dx_tex_load.h  ngl_dx_texture.h  ngl_dx_vertexdef.h
src/ngl/shaders/: us_colorvol.h  us_decal.cpp  us_decal.h  us_exterior.cpp  us_exterior.h  us_frontend.cpp  us_frontend.h  us_interior.h  us_lighting.cpp  us_lighting.h  us_lod.cpp  us_lod.h  us_outline.cpp  us_outline.h  us_pcuv_shader.cpp  us_pcuv_shader.h  us_person.cpp  us_person.h  us_simpleshader.cpp  us_simpleshader.h  us_street.cpp  us_street.h  us_translucentshader.cpp  us_translucentshader.h  us_variant.cpp  us_variant.h
src/ngl/src/: ngl_lighting.cpp  ngl_mesh.cpp  ngl_params.cpp  ngl_scene.cpp  ngl_texture.cpp  ngl_vertexdef.cpp
src/ngl/src/dx/: ngl_dx_core.cpp  ngl_dx_draw.cpp  ngl_dx_font.cpp  ngl_dx_palette.cpp  ngl_dx_scene.cpp  ngl_dx_shader.cpp  ngl_dx_state.cpp  ngl_dx_tex_create.cpp  ngl_dx_tex_load.cpp  ngl_dx_texture.cpp  ngl_dx_vertexdef.cpp
src/nsl/src/nsl/: nslbank.cpp  nslbank.h  nslbankload.cpp  nslbankload.h
src/panels/nalpanel/: panel_pose_skel.cpp  panel_pose_skel.h
src/physics/include/: environment_rigid_body.h  nuge.h  outer_time.h  phys_anim_bone_array.h  phys_array_base.h  phys_avl_tree.h  phys_mem.h  phys_mem_info.h  phys_memory_pool_base.h  phys_vector3d.h  physics_system.h  pulse_sum_cache.h  pulse_sum_normal.h  rb_capsule_pair.h  rb_collision_capsule.h  rb_ragdoll_model.h  rbc_base.h  rbc_def_contact.h  rbc_def_distance.h  rbc_def_point.h  rigid_body.h  rigid_body_pair_key.h
src/physics/source/: environment_rigid_body.cpp  nuge.cpp  phys_anim_bone_array.cpp  phys_avl_tree.cpp  phys_mem.cpp  phys_mem_info.cpp  phys_memory_pool_base.cpp  phys_vector3d.cpp  physics_system.cpp  physics_system_internal.cpp  pulse_sum_cache.cpp  pulse_sum_normal.cpp  rb_capsule_pair.cpp  rb_collision_capsule.cpp  rb_ragdoll_model.cpp  rbc_def_contact.cpp  rbc_def_distance.cpp  rbc_def_point.cpp  rigid_body.cpp
src/tx/src/: tx_system.cpp  tx_system.h
src/utility/: common.h  error.h  func_wrapper.h  log.h  trace.cpp  trace.h  utility.h  variable.h  vtbl.h
src/variables/: variables.cpp  variables.h
test/: CMakeLists.txt  run.sh  stack.cpp  wine.sh
